# syspath

./: .codeclimate.yml  .coveragerc  .drone.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-test-python3.txt  requirements-test.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml
syspath/: __init__.py  current_path.py  git_root.py  parent_path.py  syspath.py
syspath/tests/: test_current_path.py  test_git_root.py  test_parent_path.py  test_syspath.py  test_version.py
