[project]
name = "syspath"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "Easily add common paths to sys.path"
requires-python = ">=3.7"
keywords = ["python", "path", "utility"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/albertyw/syspath"

[tool.setuptools.dynamic]
version = {attr = "syspath.__version__.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[tool.setuptools.package-data]
syspath = ["py.typed"]

[tool.ruff]
select = ["E", "F", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
